syntax = "proto3";

package proto;
option go_package ="/";

message CreateContractRequest{
  string contract_name=1;
  string name=2;
  string symbol=3;
  string version=4;
}

message MintNftRequest{
  string contract_name=1;
  string address_to=2;
  string token_url=3;
}
message MintNftResponse{
  string status=1;
  int64 token_id=2;
}

message TransferNftRequest{
  string contract_name=1;
  string address_from=2;
  string address_to=3;
  int64 token_id=4;
}

message DetailsNftRequest{
  string contract_name=1;
  int64 token_id=2;
}

message DetailsNftResponse{
  string token_url=1;
}

message ApproveNftRequest{
  string contract_name=1;
  string address_to=2;
  int64 token_id=3;
}

message DetailsNftContractRequest{
  string contract_name=1;
}

message DetailsNftContractResponse{
  repeated string details=1;
}

message TransactionResponse{
  string status=1;
}

service ContractService {
  rpc CreateContract (CreateContractRequest) returns (TransactionResponse) {}
  rpc MintNft (MintNftRequest) returns (MintNftResponse) {}
  rpc TransferNft (TransferNftRequest) returns (TransactionResponse) {}
  rpc DetailsNft (DetailsNftRequest) returns (DetailsNftResponse) {}
  rpc ApproveNft (ApproveNftRequest) returns (TransactionResponse) {}
  rpc DetailsNftContract (DetailsNftContractRequest) returns (DetailsNftContractResponse) {}
}